--- a/src/components/TableRow/index.scss
+++ b/src/components/TableRow/index.scss
@@ -1,11 +1,13 @@
 .table-row {
   cursor: pointer;
   .table-row-wrapper {
-    display: flex;
+    display: block;
     align-items: center;
     justify-content: space-between;
   }
   h4 {
     color: #3883d8;
+    text-align: center;
+    font-size: 20px;
   }
 }
