--- a/src/containers/App/index.scss
+++ b/src/containers/App/index.scss
@@ -18,7 +18,15 @@ h1 {
   color: $primary;
   font-size: 40px;
 }
-
+a{
+  color: #0366d6;
+  font-size: 40px;
+  text-decoration: none;
+  h1{
+    color: #0366d6;
+    opacity: 0.8;
+  }
+}
 button {
   position: relative;
   display: inline-block;
