--- a/src/containers/HomePage/index.scss
+++ b/src/containers/HomePage/index.scss
@@ -7,12 +7,12 @@
     }
     .githubform {
       input[type="text"] {
-        min-height: 34px;
+        min-height: 60px;
         padding: 6px 8px;
-        font-size: 16px;
+        font-size: 25px;
         line-height: 20px;
         border: 1px solid #d1d5da;
-        border-radius: 3px;
+        border-radius: 20px;
         outline: none;
         box-shadow: inset 0 1px 2px rgba(27,31,35,0.075);
         float: left;
@@ -21,8 +21,12 @@
       }
       button {
         float: left;
-        width: 20%;
+        width: 15%;
         cursor: pointer;
+        margin-left: 20px;
+        min-height: 58px;
+        border-radius: 20px;
+        font-size: 25px;
       }
       &::after {
         content: "";
