--- a/src/components/Comments/index.scss
+++ b/src/components/Comments/index.scss
@@ -26,3 +26,36 @@
     width: 90%;
     margin: 10px 40px;
 }
+.githubform {
+    input[type="text"] {
+      min-height: 30px;
+      padding: 6px 8px;
+      font-size: 12px;
+      line-height: 20px;
+      border: 1px solid #d1d5da;
+      border-radius: 10px;
+      outline: none;
+      box-shadow: inset 0 1px 2px rgba(27,31,35,0.075);
+      float: left;
+      width: 80%;
+      background: #FFF;
+      margin-bottom: 10px;
+    }
+    input[type="submit"]{
+      float: left;
+      width: 15%;
+      cursor: pointer;
+      margin-left: 20px;
+      min-height: 58px;
+      border-radius: 10px;
+      font-size: 20px;
+      margin-top: -35px;
+      background-color: #0366d6;
+      color: white;
+    }
+    &::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+  }
