--- a/src/containers/HomePage/index.scss
+++ b/src/containers/HomePage/index.scss
@@ -1,4 +1,8 @@
 .home-page-wrapper {
+  @media only screen and (min-width : 320px) and (max-width : 991px) {
+      width: 100%;
+      margin: 0;
+    }
   width: 60%;
   margin: 0 auto;
   .user-repo-form {
@@ -18,6 +22,10 @@
         float: left;
         width: 80%;
         background: #FFF;
+        @media only screen and (min-width : 320px) and (max-width : 991px) {
+            width: 95%;
+            margin: 10px;
+          }
       }
       button {
         float: left;
@@ -27,6 +35,9 @@
         min-height: 58px;
         border-radius: 20px;
         font-size: 25px;
+        @media only screen and (min-width : 320px) and (max-width : 991px) {
+          width: 85%;
+          }
       }
       &::after {
         content: "";
@@ -37,14 +48,20 @@
 
     input[type="text"]:focus {
       width: 80%;
+      @media only screen and (min-width : 320px) and (max-width : 991px) {
+        width: 95%;
+      }
     }
     input[type="text"]:focus ~ button {
-      background: #006699;
+      background: #0366d6;
     }
   }
 
   .user-repositories-list {
     padding: 20px 0;
+    @media only screen and (min-width : 320px) and (max-width : 991px) {
+      padding: 20px 15px;
+    }
     ul {
       list-style: none;
       padding: 0;
