--- a/src/containers/ListPage/index.scss
+++ b/src/containers/ListPage/index.scss
@@ -1,7 +1,9 @@
 .list-page-wrapper {
   width: 80%;
   margin: 40px auto;
-
+  @media only screen and (min-width : 320px) and (max-width : 991px) {
+    width: 95%;
+  }
   .user-issues-list {
     margin: 20px 0;
     border: 1px solid #e1e4e8;
@@ -48,6 +50,10 @@
   border: 1px solid #d8eef5;
   border-radius: 2px;
   min-width: 1rem;
+  font-size: 30px;
+  @media only screen and (min-width : 320px) and (max-width : 991px) {
+    font-size: 15px;
+  }
 }
 
 .issues__pagination li > a:focus {
