added pagination in repos list

--- a/src/components/TableRow/index.scss
+++ b/src/components/TableRow/index.scss
@@ -11,3 +11,17 @@
     font-size: 20px;
   }
 }
+.select-repo {
+  display: inline-block;
+  float: right;
+  margin-right: 20px;
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 4px 10px 5px;
+  color: #fff;
+  text-align: center;
+  background-color: #2cbe4e;
+  border-radius: 3px;
+  min-width: 200px;
+}
