--- a/src/components/TableRow/index.scss
+++ b/src/components/TableRow/index.scss
@@ -9,6 +9,11 @@
     color: #3883d8;
     text-align: center;
     font-size: 20px;
+    @media only screen and (min-width : 320px) and (max-width : 991px) {
+      max-width: 200px;
+      overflow: hidden;
+      text-align: left;
+    }
   }
 }
 .select-repo {
@@ -24,4 +29,8 @@
   background-color: #2cbe4e;
   border-radius: 3px;
   min-width: 200px;
+  @media only screen and (min-width : 320px) and (max-width : 991px) {
+    max-width: 35%;
+    min-width: unset;
+  }
 }
